--- a/PowerPointLabs/PowerPointLabs/LiveCodingLab/Views/CodeBoxPaneItem.xaml
+++ b/PowerPointLabs/PowerPointLabs/LiveCodingLab/Views/CodeBoxPaneItem.xaml
@@ -6,7 +6,7 @@
              xmlns:theme="clr-namespace:PowerPointLabs.ColorThemes"
              xmlns:local="clr-namespace:PowerPointLabs.LiveCodingLab.Views"
              mc:Ignorable="d" 
-             d:DesignWidth="278"
+             d:DesignWidth="340"
              MouseDoubleClick="OnMouseDoubleClick">
     <UserControl.Resources>
         <ResourceDictionary>
@@ -66,9 +66,9 @@
     <Grid x:Name="grid" ClipToBounds="True" Background="Transparent" Height="97" Margin="0,0,-3,0">
         <Grid.ColumnDefinitions>
             <ColumnDefinition x:Name="col1" Width="3" MaxWidth="5"/>
-            <ColumnDefinition x:Name="col2" Width="200" MaxWidth="200"/>
-            <ColumnDefinition x:Name="col3" Width="30" MaxWidth="30"/>
-            <ColumnDefinition Width="30" MaxWidth="30"/>
+            <ColumnDefinition x:Name="col2" Width="250" MaxWidth="250"/>
+            <ColumnDefinition x:Name="col3" Width="35" MaxWidth="35"/>
+            <ColumnDefinition Width="35" MaxWidth="35"/>
         </Grid.ColumnDefinitions>
         <Grid x:Name="canvas" Grid.Column="1" MaxWidth="225">
             <Grid.RowDefinitions>
@@ -76,20 +76,23 @@
                 <RowDefinition Height="2*"/>
             </Grid.RowDefinitions>
             <TextBox x:Name="codeTextBox" Style="{StaticResource TextBoxWithPlaceHolder}" 
-                             Text="{Binding Path=Text, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Padding="2 2 2 2"
+                             Text="{Binding Path=Text, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Padding="1 1 1 1"
                              TextWrapping="Wrap" FontSize="12" Tag="Enter your code here..."
-                             AcceptsReturn="True" Margin="0,5,1,0" Height="68" VerticalAlignment="Top" VerticalScrollBarVisibility="Auto"/>
+                             AcceptsReturn="True" Margin="0,5,0,0" Height="68" VerticalAlignment="Top" VerticalScrollBarVisibility="Auto"/>
             <RadioButton x:Name="isFile" Content="File"  VerticalContentAlignment="Center" 
-                     FontSize="10" Margin="50,78,101,0" ToolTip="Check to use a file path for the code snippet."
+                     FontSize="10" Margin="50,74,101,0" ToolTip="Check to use a file path for the code snippet."
                      Checked="IsFile_Checked"/>
             <RadioButton x:Name="isText" Content="Text"  VerticalContentAlignment="Center" 
-                     FontSize="10" Margin="0,78,151,0" ToolTip="Check to use a user input text for the code snippet."
+                     FontSize="10" Margin="0,74,151,0" ToolTip="Check to use a user input text for the code snippet."
                      Checked="IsText_Checked"/>
             <RadioButton x:Name="isURL" Content="URL"  VerticalContentAlignment="Center" 
-                     FontSize="10" Margin="100,78,51,0" ToolTip="Check to use a URL for the code snippet." 
+                     FontSize="10" Margin="100,74,73,0" ToolTip="Check to use a URL for the code snippet." 
                      Checked="IsURL_Checked"/>
+            <RadioButton x:Name="isDiff" Content="Diff"  VerticalContentAlignment="Center" 
+                     FontSize="10" Margin="157,74,13,0" ToolTip="Check to use a diff for the code snippet." 
+                     Checked="IsDiff_Checked"/>
         </Grid>
-        <Button x:Name="insertButton" Grid.Column="2" Margin="0,3,2,60" Click="InsertButton_Click" HorizontalAlignment="Right" MinWidth="25" MaxWidth="25" MinHeight="25" MaxHeight="25" Style="{StaticResource ImageButtonStyle}" Width="25">
+        <Button x:Name="insertButton" Grid.Column="2" Margin="0,3,6,60" Click="InsertButton_Click" HorizontalAlignment="Right" MinWidth="25" MaxWidth="25" MinHeight="25" MaxHeight="25" Style="{StaticResource ImageButtonStyle}" Width="25">
             <Image x:Name="insertCode" Source="pack://siteoforigin:,,,/Resources/SyncLabEditButton.png" Stretch="Fill"/>
             <Button.ToolTip>
                 <StackPanel>
@@ -101,7 +104,7 @@
                 </StackPanel>
             </Button.ToolTip>
         </Button>
-        <Button x:Name="deleteButton" Grid.Column="2" Margin="0,42,2,21" Click="DeleteButton_Click" HorizontalAlignment="Right" MinWidth="25" MaxWidth="25" MinHeight="25" MaxHeight="25" Style="{StaticResource ImageButtonStyle}" Width="25">
+        <Button x:Name="deleteButton" Grid.Column="2" Margin="0,42,6,21" Click="DeleteButton_Click" HorizontalAlignment="Right" MinWidth="25" MaxWidth="25" MinHeight="25" MaxHeight="25" Style="{StaticResource ImageButtonStyle}" Width="25">
             <Image x:Name="deleteImage" Source="pack://siteoforigin:,,,/Resources/SyncLabDeleteButton.png" Stretch="Fill"/>
             <Button.ToolTip>
                 <StackPanel>
