--- a/PowerPointLabs/PowerPointLabs/LiveCodingLab/Views/LiveCodingPaneWPF.xaml
+++ b/PowerPointLabs/PowerPointLabs/LiveCodingLab/Views/LiveCodingPaneWPF.xaml
@@ -7,7 +7,7 @@
              xmlns:views="clr-namespace:PowerPointLabs.LiveCodingLab.Views"
              xmlns:theme="clr-namespace:PowerPointLabs.ColorThemes"
              mc:Ignorable="d" 
-             d:DesignHeight="725" d:DesignWidth="310"
+             d:DesignHeight="883" d:DesignWidth="360"
              x:Name="liveCodingPane" FocusVisualStyle="{x:Null}">
     <UserControl.Resources>
         <ResourceDictionary>
@@ -31,7 +31,7 @@
         <KeyBinding Key="LeftCtrl"/>
     </UserControl.InputBindings>
     <ScrollViewer>
-        <Grid VerticalAlignment="Top" Height="725" Width="300" >
+        <Grid VerticalAlignment="Top" Height="883" Width="350" >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
@@ -39,7 +39,7 @@
                 <RowDefinition Height="6*"/>
                 <RowDefinition Height="115*"/>
             </Grid.RowDefinitions>
-            <GroupBox x:Name="codeBoxGroupBox" Header="Code Box" HorizontalAlignment="Left" Margin="10,5,0,0" VerticalAlignment="Top" Height="117" Width="280" Grid.RowSpan="2">
+            <GroupBox x:Name="codeBoxGroupBox" Header="Code Box" HorizontalAlignment="Left" Margin="10,5,0,0" VerticalAlignment="Top" Height="117" Width="335" Grid.RowSpan="2">
                 <WPF:ImageButton ToolTip="Opens the settings for Code Box functions" x:Name="codeBoxSettingsButton" HorizontalAlignment="Right" Margin="0,-29,0,0" VerticalAlignment="Top" Width="20" Height="20" Click="CodeBoxSettingsButton_Click" Background="{x:Null}" BorderBrush="{x:Null}">
                     <Image Source="..\..\Resources\SettingsGear.png"/>
                 </WPF:ImageButton>
@@ -47,20 +47,24 @@
             <WPF:ImageButton ToolTip="Inserts a Code Box object into the slides" x:Name="insertCodeBox"  HorizontalAlignment="Left" Margin="18,35,0,0" VerticalAlignment="Top" Width="60" Height="45" Click="InsertCodeBoxButton_Click" Background="{x:Null}" BorderBrush="{x:Null}" Grid.RowSpan="2">
                 <Image Source="..\..\Resources\InsertCode.png"/>
             </WPF:ImageButton>
-            <TextBlock x:Name="insertCodeBoxTextBlock" HorizontalAlignment="Left" Margin="18,44.5,0,0" TextWrapping="Wrap" Text="Insert Code" VerticalAlignment="Top" TextAlignment="Center" Height="32" Width="60" Grid.Row="1"/>
-            <WPF:ImageButton ToolTip="Retrieves updated code from sources specified in code boxes" x:Name="refreshCodeButton" HorizontalAlignment="Left" Margin="85,35,0,0" VerticalAlignment="Top" Width="60" Height="45" Click="RefreshCodeButton_Click" Background="{x:Null}" BorderBrush="{x:Null}" Grid.RowSpan="2">
+            <TextBlock x:Name="insertCodeBoxTextBlock" HorizontalAlignment="Left" Margin="18,36,0,0" TextWrapping="Wrap" Text="Insert Code" VerticalAlignment="Top" TextAlignment="Center" Height="32" Width="60" Grid.Row="1"/>
+            <WPF:ImageButton ToolTip="Retrieves updated code from sources specified in code boxes" x:Name="refreshCodeButton" HorizontalAlignment="Left" Margin="83.5,35,0,0" VerticalAlignment="Top" Width="60" Height="45" Click="RefreshCodeButton_Click" Background="{x:Null}" BorderBrush="{x:Null}" Grid.RowSpan="2">
                 <Image Source="..\..\Resources\RefreshCode.png"/>
             </WPF:ImageButton>
-            <TextBlock x:Name="refreshCodeTextBlock" HorizontalAlignment="Left" Margin="85,44.5,0,0" TextWrapping="Wrap" Text="Refresh Code" VerticalAlignment="Top" TextAlignment="Center" Height="32" Width="60" Grid.Row="1"/>
-            <WPF:ImageButton ToolTip="Retrieves updated code from sources specified in code boxes" x:Name="refreshAllCodeButton" HorizontalAlignment="Left" Margin="152,35,0,0" VerticalAlignment="Top" Width="60" Height="45" Click="RefreshAllCodeButton_Click" Background="{x:Null}" BorderBrush="{x:Null}" Grid.RowSpan="2">
+            <TextBlock x:Name="refreshCodeTextBlock" HorizontalAlignment="Left" Margin="84,36,0,0" TextWrapping="Wrap" Text="Refresh Code" VerticalAlignment="Top" TextAlignment="Center" Height="32" Width="60" Grid.Row="1"/>
+            <WPF:ImageButton ToolTip="Retrieves updated code from sources specified in code boxes" x:Name="refreshAllCodeButton" HorizontalAlignment="Left" Margin="149,35,0,0" VerticalAlignment="Top" Width="60" Height="45" Click="RefreshAllCodeButton_Click" Background="{x:Null}" BorderBrush="{x:Null}" Grid.RowSpan="2">
                 <Image Source="..\..\Resources\RefreshAllCode.png"/>
             </WPF:ImageButton>
-            <TextBlock x:Name="refreshAllCodeTextBlock" HorizontalAlignment="Left" Margin="152,44.5,0,0" TextWrapping="Wrap" Text="Refresh All Code" VerticalAlignment="Top" TextAlignment="Center" Height="32" Width="60" Grid.Row="1"/>
-            <WPF:ImageButton ToolTip="Groups all selected code boxes" x:Name="groupCodeBoxButton" HorizontalAlignment="Left" Margin="217,35,0,0" VerticalAlignment="Top" Width="60" Height="45" Click="GroupCodeButton_Click" Background="{x:Null}" BorderBrush="{x:Null}" Grid.RowSpan="2">
+            <TextBlock x:Name="refreshAllCodeTextBlock" HorizontalAlignment="Left" Margin="149,36,0,0" TextWrapping="Wrap" Text="Refresh All Code" VerticalAlignment="Top" TextAlignment="Center" Height="32" Width="60" Grid.Row="1"/>
+            <WPF:ImageButton ToolTip="Groups all selected code boxes" x:Name="groupCodeBoxButton" HorizontalAlignment="Left" Margin="214.5,35,0,0" VerticalAlignment="Top" Width="60" Height="45" Click="GroupCodeButton_Click" Background="{x:Null}" BorderBrush="{x:Null}" Grid.RowSpan="2">
                 <Image Source="..\..\Resources\GroupCode.png"/>
             </WPF:ImageButton>
-            <TextBlock x:Name="groupCodeBoxesTextBlock" HorizontalAlignment="Left" Margin="217,44.5,0,0" TextWrapping="Wrap" Text="Group Code Box" VerticalAlignment="Top" TextAlignment="Center" Height="32" Width="60" Grid.Row="1"/>
-            <GroupBox x:Name="animationGroupBox" Header="Animation" HorizontalAlignment="Left" Margin="10,91.5,0,0" VerticalAlignment="Top" Height="116" Width="280" Grid.Row="1">
+            <TextBlock x:Name="groupCodeBoxesTextBlock" HorizontalAlignment="Left" Margin="214,36,0,0" TextWrapping="Wrap" Text="Group Code Box" VerticalAlignment="Top" TextAlignment="Center" Height="32" Width="60" Grid.Row="1"/>
+            <WPF:ImageButton ToolTip="Creates animations to highlight the differences and animate new lines between two code snippets based on a diff file" x:Name="insertDiffButton" HorizontalAlignment="Left" Margin="280,35,0,0" VerticalAlignment="Top" Width="60" Height="45" Click="InsertDiffButton_Click" Background="{x:Null}" BorderBrush="{x:Null}" Grid.RowSpan="2">
+                <Image Source="..\..\Resources\InsertDiff.png"/>
+            </WPF:ImageButton>
+            <TextBlock x:Name="insertDiffTextBlock" HorizontalAlignment="Left" Margin="280,36,0,0" TextWrapping="Wrap" Text="Insert Diff Files" VerticalAlignment="Top" TextAlignment="Center" Height="32" Width="60" Grid.Row="1"/>
+            <GroupBox x:Name="animationGroupBox" Header="Animation" HorizontalAlignment="Left" Margin="10,92,0,0" VerticalAlignment="Top" Height="116" Width="335" Grid.Row="1">
                 <WPF:ImageButton ToolTip="Opens the settings for Animation functions" x:Name="animationSettingsButton" HorizontalAlignment="Right" Margin="0,-29,0,0" VerticalAlignment="Top" Width="20" Height="20" Click="AnimationSettingsButton_Click" Background="{x:Null}" BorderBrush="{x:Null}">
                     <Image Source="..\..\Resources\SettingsGear.png"/>
                 </WPF:ImageButton>
@@ -69,17 +73,17 @@
                 <Image Source="..\..\Resources\HighlightDifference.png"/>
             </WPF:ImageButton>
             <TextBlock x:Name="highlightDifferenceTextBlock" HorizontalAlignment="Left" Margin="18,166.5,0,0" TextWrapping="Wrap" Text="Highlight Difference" VerticalAlignment="Top" TextAlignment="Center" Height="32" Width="60" Grid.Row="1"/>
-            <WPF:ImageButton ToolTip="Animates the insertion of new lines across two code snippets on two separate slides" x:Name="animateNewLinesButton" HorizontalAlignment="Left" Margin="85,121.5,0,0" VerticalAlignment="Top" Width="60" Height="45" Click="AnimateNewLinesButton_Click" Background="{x:Null}" BorderBrush="{x:Null}" Grid.Row="1">
+            <WPF:ImageButton ToolTip="Animates the insertion of new lines across two code snippets on two separate slides" x:Name="animateNewLinesButton" HorizontalAlignment="Left" Margin="83.5,121.5,0,0" VerticalAlignment="Top" Width="60" Height="45" Click="AnimateNewLinesButton_Click" Background="{x:Null}" BorderBrush="{x:Null}" Grid.Row="1">
                 <Image Source="..\..\Resources\AnimateNewLines.png"/>
             </WPF:ImageButton>
-            <TextBlock x:Name="animateNewLinesTextBlock" HorizontalAlignment="Left" Margin="85,166.5,0,0" TextWrapping="Wrap" Text="Animate New Lines" VerticalAlignment="Top" TextAlignment="Center" Height="32" Width="60" Grid.Row="1"/>
-            <WPF:ImageButton ToolTip="Creates animations to highlight the differences and animate new lines between two code snippets based on a diff file" x:Name="insertDiffButton" HorizontalAlignment="Left" Margin="152,121.5,0,0" VerticalAlignment="Top" Width="60" Height="45" Click="InsertDiffButton_Click" Background="{x:Null}" BorderBrush="{x:Null}" Grid.Row="1">
-                <Image Source="..\..\Resources\InsertDiff.png"/>
+            <TextBlock x:Name="animateNewLinesTextBlock" HorizontalAlignment="Left" Margin="83.5,166.5,0,0" TextWrapping="Wrap" Text="Animate New Lines" VerticalAlignment="Top" TextAlignment="Center" Height="32" Width="60" Grid.Row="1"/>
+            <WPF:ImageButton ToolTip="Animates the changes across two code snippets on two separate slides" x:Name="animateDiffButton" HorizontalAlignment="Left" Margin="149,121.5,0,0" VerticalAlignment="Top" Width="60" Height="45" Click="AnimateDiffButton_Click" Background="{x:Null}" BorderBrush="{x:Null}" Grid.Row="1">
+                <Image Source="..\..\Resources\AnimateNewLines.png"/>
             </WPF:ImageButton>
-            <TextBlock x:Name="insertDiffTextBlock" HorizontalAlignment="Left" Margin="152,166.5,0,0" TextWrapping="Wrap" Text="Insert Diff Files" VerticalAlignment="Top" TextAlignment="Center" Height="32" Width="60" Grid.Row="1"/>
+            <TextBlock x:Name="animateDiffTextBlock" HorizontalAlignment="Left" Margin="149,166.5,0,0" TextWrapping="Wrap" Text="Animate Diff" VerticalAlignment="Top" TextAlignment="Center" Height="32" Width="60" Grid.Row="1"/>
             <ListView Name="codeListBox"
                  ItemsSource="{Binding CodeBoxPaneItem}"
-                 Margin="10,212.5,10,10"
+                 Margin="10,212,5,10"
                  HorizontalAlignment="Stretch"
                  HorizontalContentAlignment="Stretch"
                  Background="{DynamicResource Theme.BackgroundBrush2}" Grid.Row="1">
