Modify Refresh Animation logic to retain all elements and non-code box animations in transition slide

--- a/PowerPointLabs/PowerPointLabs/LiveCodingLab/Views/LiveCodingPaneWPF.xaml
+++ b/PowerPointLabs/PowerPointLabs/LiveCodingLab/Views/LiveCodingPaneWPF.xaml
@@ -88,7 +88,7 @@
             <WPF:ImageButton ToolTip="" x:Name="createCustomSlideShowButton" HorizontalAlignment="Left" Margin="280,121.5,0,0" VerticalAlignment="Top" Width="60" Height="45" Click="CreateCustomSlideShowButton_Click" Background="{x:Null}" BorderBrush="{x:Null}" Grid.Row="1">
                 <Image Source="..\..\Resources\AnimateNewLines.png"/>
             </WPF:ImageButton>
-            <TextBlock x:Name="createCustomSlideShowTextBlock" HorizontalAlignment="Left" Margin="280,166,0,0" TextWrapping="Wrap" Text="Create Custom Slideshow" VerticalAlignment="Top" TextAlignment="Center" Height="32" Width="60" Grid.Row="1"/>
+            <TextBlock x:Name="createCustomSlideShowTextBlock" HorizontalAlignment="Left" Margin="280,166,0,0" TextWrapping="Wrap" Text="Create Handouts" VerticalAlignment="Top" TextAlignment="Center" Height="32" Width="60" Grid.Row="1"/>
             <ListView Name="codeListBox"
                  ItemsSource="{Binding CodeBoxPaneItem}"
                  Margin="10,212,5,10"
